--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -6,27 +6,41 @@
 \epigraph{The best way to predict the future is to implement it.}
 {\textsc{---david heinemeier hansson}}
 
-\begin{itemize}
-\item conclusion / summary discussion (2 days)
+\section{Research contribution}
+\subsection{A language of collective array operations}
+\subsection{A fusion system for embedded array languages}
+\subsection{A high-performance implementation for CUDA GPUs}
 
-\item future work
-    \begin{itemize}
-    \item frontend
-        \begin{itemize}
-            \item fusion cost analysis (1 day)
-            \item user controllable fusion (e.g. inline/noinline annotations) (1 day)
-            \item used definable rewrite rules (1 day)
-        \end{itemize}
-    \item backend
-        \begin{itemize}
-            \item type-preserving code generation (1 day)
-        \end{itemize}
-    \item language
-        \begin{itemize}
-            \item first order flattening: naturally nested algorithms
-                (barns-hutt) as well as convenience of expression
-                (matrix-vector) (2 days)
-        \end{itemize}
-    \end{itemize}
-\end{itemize}
+\section{Related work}
+
+\section{Future work}
+\subsection{Type-preserving code generation}
+\subsection{Nested data parallelism}
+\subsection{Flexibility in the optimisation pipeline}
+
+
+
+% \begin{itemize}
+% \item conclusion / summary discussion (2 days)
+%
+% \item future work
+%     \begin{itemize}
+%     \item frontend
+%         \begin{itemize}
+%             \item fusion cost analysis (1 day)
+%             \item user controllable fusion (e.g. inline/noinline annotations) (1 day)
+%             \item used definable rewrite rules (1 day)
+%         \end{itemize}
+%     \item backend
+%         \begin{itemize}
+%             \item type-preserving code generation (1 day)
+%         \end{itemize}
+%     \item language
+%         \begin{itemize}
+%             \item first order flattening: naturally nested algorithms
+%                 (barns-hutt) as well as convenience of expression
+%                 (matrix-vector) (2 days)
+%         \end{itemize}
+%     \end{itemize}
+% \end{itemize}
 
