--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -4,9 +4,9 @@
 
 \chapter{Results}
 \label{ch:results}
-% \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow
-% out grow out of a ship's plank, and in general enable his votaries to see the
-% world as the world's not.}%
+% \epigraph{Dionysus [is] the Master of Illusions, who could make a vine grow out
+% of a ship's plank, and in general enable his votaries to see the world as the
+% world's not.}%
 % {\textsc{---e.\ r.\ dodds}\\\textit{The Greeks and the Irrational}}
 
 % \epigraph{If the immutable appears recast, then you yourself have been
@@ -16,27 +16,6 @@
 \epigraph{Logic merely enables one to be wrong with authority}%
 {\textsc{---the doctor}} %\\\textit{The Wheel in Space}}
 
-% \begin{itemize}
-%     \item performance \& analysis
-%     \begin{itemize}
-%       \item What is an optimisation? Describe the metrics considered.
-%         \begin{itemize}
-%           \item wall-clock time, parallel speedup??
-%           \item instruction count
-%           \item memory traffic (load/store/coalescing)
-%           \item memory size (heap, register count, shared memory)
-%           \item program size (number of parallel steps)
-%           \item code size (generated binary, compilation time c.f. code complexity)
-%         \end{itemize}
-%     \end{itemize}
-%
-%     \item expressiveness / example programs
-%     \item difficulties
-%     \begin{itemize}
-%         \item code generation
-%         \item unintentional nesting
-%     \end{itemize}
-% \end{itemize}
 
 The previous chapters discussed the design, implementation and optimisation of
 the Accelerate language and CUDA backend. This chapter analyses the performance
@@ -1374,4 +1353,26 @@ matrix formats.
 \section{Discussion}
 \subsection{Related Work}
 \subsection{Future Work}
+
+% \begin{itemize}
+%     \item performance \& analysis
+%     \begin{itemize}
+%       \item What is an optimisation? Describe the metrics considered.
+%         \begin{itemize}
+%           \item wall-clock time, parallel speedup??
+%           \item instruction count
+%           \item memory traffic (load/store/coalescing)
+%           \item memory size (heap, register count, shared memory)
+%           \item program size (number of parallel steps)
+%           \item code size (generated binary, compilation time c.f. code complexity)
+%         \end{itemize}
+%     \end{itemize}
+%
+%     \item expressiveness / example programs
+%     \item difficulties
+%     \begin{itemize}
+%         \item code generation
+%         \item unintentional nesting
+%     \end{itemize}
+% \end{itemize}
 
