--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 25 Oct 2013.
+%% Created using Papers on Sun, 24 Nov 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -109,7 +109,7 @@ address = {New York, NY, USA}
 @inproceedings{Wadler:1981hy,
 author = {Wadler, Philip},
 title = {{Applicative style programming, program transformation, and list operators}},
-booktitle = {FPCA '81: Proceedings of the 1981 conference on Functional programming languages and computer architecture},
+booktitle = {FPCA '81: The 1981 conference on Functional programming languages and computer architecture},
 year = {1981},
 publisher = { ACM  Request Permissions},
 month = oct
@@ -1222,12 +1222,12 @@ month = jun,
 annote = {An extension to C that supports very lightweight tasks by a generalisation of the idea of a function call. Uses an efficient load-balancing strategy called work stealing that minimises communication between processors.}
 }
 
-@book{MPI:2008,
+@misc{MPI:2012,
+title = {{MPI: A Message-Passing Interface Standard version 3.0}},
 author = {{Message Passing Interface Forum}},
-title = {{MPI: A Message-Passing Interface Standard, v2.1}},
-publisher = {High Performance Computing Center Stuttgart (HLRS)},
-year = {2008},
-month = jun
+howpublished = {High Performance Computing Center Stuttgart (HLRS)},
+month = sep,
+year = {2012}
 }
 
 @article{Numrich:1998,
@@ -1507,7 +1507,7 @@ month = mar
 @inproceedings{Takano:1995,
 author = {Takano, Akihiko and Meijer, Erik},
 title = {{Shortcut deforestation in calculational form}},
-booktitle = {FPCA '95: Proceedings of the seventh international conference on Functional programming languages and computer architecture},
+booktitle = {FPCA '95: The 7th international conference on Functional programming languages and computer architecture},
 year = {1995},
 publisher = { ACM  Request Permissions},
 month = oct,
@@ -2181,7 +2181,7 @@ publisher = {ACM Press},
 address = {New York, New York, USA}
 }
 
-@article{Dean:2008,
+@article{Dean:2008fi,
 author = {Dean, Jeffrey and Ghemawat, Sanjay},
 title = {{MapReduce: simplified data processing on large clusters}},
 journal = {Communications of the ACM},
@@ -2526,6 +2526,35 @@ booktitle = {FHPC '13: The 2nd ACM SIGPLAN Workshop on Functional High-Performan
 year = {2013},
 pages = {13--24},
 month = sep
+}
+
+@inproceedings{Svenningsson:2013jw,
+author = {Svenningsson, Josef and Svensson, Bo Joel and Sheeran, Mary},
+title = {{Counting and occurrence sort for GPUs using an embedded language}},
+booktitle = {FHPC '13: The 2nd ACM SIGPLAN Workshop on Functional High-Performance Computing},
+year = {2013},
+pages = {37--46},
+address = {Boston, Massachusetts, USA},
+month = sep
+}
+
+@article{Kolonias:2011kc,
+author = {Kolonias, Vasileios and Voyiatzis, Artemios G and Goulas, George and Housos, Efthymios},
+title = {{Design and implementation of an efficient integer count sort in CUDA GPUs}},
+journal = {ASIAN '96: Proceedings of the Second Asian Computing Science Conference on Concurrency and Parallelism, Programming, Networking, and Security},
+year = {2011},
+volume = {23},
+number = {18},
+pages = {2365--2381},
+month = jun
+}
+
+@misc{HPF:1997,
+title = {{High Performance Fortran Language Specification version 2.0}},
+author = {{High Performance Fortran Forum}},
+howpublished = {Rice University},
+month = jan,
+year = {1997}
 }
 
 @inproceedings{Warren:1984ka,
