disable chapter 2 (background)

--- a/thesis.tex
+++ b/thesis.tex
@@ -63,7 +63,7 @@
 \renewcommand{\chapter}[1]{\oldchapter{#1}\addthumb{#1}{}{white}{black}}
 
 \include{sections/01-introduction}
-\include{sections/02-background}
+% \include{sections/02-background}
 \include{sections/03-design}
 \include{sections/04-implementation}
 \include{sections/05-optimisation}
